--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
         </section>
         <section id="challenge">
             <h1 class="title">How we help tackle these <span class="titleColor">challenges</span>?</h1>
-            <div class="card" id="cataFactory">
-                <img src="/assets/img/Datafactory-v3.png" alt="">
-                <div>
+            <div class="card" id="dataFactory">
+                <img class="illustration" src="/assets/img/Datafactory-v3.png" alt="">
+                <div class="text">
                     <h1><img src="/assets/img/navTitleItemImage.svg" alt="">DATAFACTORY</h1>
                     <p>Build your next generation data warehouse automation platform with its unique low-code/no-code approach. Accelerate your business today and generate untapped value from your organization's data.</p>
                     <ul>
@@ -186,7 +186,7 @@
                 </div>
             </div>
             <div class="card" id="propilot">
-                <div>
+                <div class="text">
                     <h1><img src="/assets/img/diagram-project.svg" alt=""> PROPILOT</h1>
                     <p>Plan, do, check and align all your strategic plans in one single platform designed and built for modern and efficient organizations. No more spreadsheets sent via emails or time wasted for reconciliation. Focus on what really matters, achieving your goals. </p>
                     <ul>
@@ -202,7 +202,7 @@
                         </a>
                     </div>
                 </div>
-                <img src="/assets/img/placeholder-illustration-datafactory.png" alt="">
+                <img class="illustration" src="/assets/img/placeholder-illustration-datafactory.png" alt="">
             </div>
         </section>
 
