--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:image" content="" />
     <link rel="stylesheet" href="/styles/style_header_footer.css">
     <link rel="stylesheet" href="/styles/style_main.css">
+    <link rel="stylesheet" href="/styles/style_mobile.css">
     <script src="https://kit.fontawesome.com/665bd144e6.js" crossorigin="anonymous"></script>
     <title>base</title>
 </head>
@@ -109,6 +110,9 @@
             </div>
         </div>
     </header>
+
+
+
     <main>
 
         <section id="meetTheFutur">
@@ -144,6 +148,7 @@
                 </div>
             </div>
         </section>
+
         <section id="chaos">
             <div class="content">
                 <div class="left">
@@ -162,8 +167,11 @@
                     </div>
                 </div>  
             </div>
-            <img src="/assets/img/computer-screen-data-score-analyst.png" alt="">
+            <div class="computerScreen">
+                <img src="/assets/img/computer-screen-data-score-analyst.png" alt="">
+            </div>
         </section>
+
         <section id="challenge">
             <h1 class="title">How we help tackle these <span class="titleColor">challenges</span>?</h1>
             <div class="card" id="dataFactory">
@@ -192,7 +200,7 @@
                     <ul>
                         <li><i class="fa-solid fa-network-wired"></i> Connect strategic plans to execution</li>
                         <li><i class="fa-solid fa-chart-line"></i> Know the status of plans </li>
-                        <li><i class="fa-regular fa-circle-exclamation"></i> Adapt quickly to changes</li> 
+                        <li><i class="fa-solid fa-circle-exclamation"></i> Adapt quickly to changes</li> 
                         <li><i class="fa-solid fa-trophy"></i> Reward real achiviers</li>
                     </ul>
                     <div class="arrowHover orange propilot" >
@@ -205,7 +213,101 @@
                 <img class="illustration" src="/assets/img/placeholder-illustration-datafactory.png" alt="">
             </div>
         </section>
+        
+        <section id="trust">
+            <h1>They trust Pilot'in. <br> <span>Why not you?</span></h1>
+            <div class="card">
+                <div class="left">
+                    <i class="fa-solid fa-circle-play"></i>
+                </div>
+                <div class="right">
+                    <div class="content">
+                        <img src="/assets/img/EXKi-2.png" alt="logo Exki">
+                        <h3 class="author">Thierry Soubestre</h3>
+                        <p>In a few weeks, 5 critical financial data sources were integrated and information is now available every day.</p>
+                        <div class="button">
+                            <i class="fa-solid fa-arrow-left"></i>
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </div>
+                        <div id="counterCard">
+                            <div class="exk"></div>
+                            <div class="ditp"></div>
+                            <div class="bnp"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <section id="article"> 
+            <h1>Nos articles de blog</h1>
+            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Est ridiculus velit interdum aliquam libero sit a in. Id nibh vitae, massa sed a vel ultricies pharetra auctor. Libero sed facilisi faucibus etiam aliquet amet, purus, tortor, cursus. Mauris malesuada morbi ultrices diam amet fringilla adipiscing faucibus quis.</h4>
+
+            <div class="cards">
+                <article>
+                    <ul class="tagList">
+                        <li>Catégorie</li>
+                    </ul>
+                    <h2>Titre de l’article sur une ou plusieurs lignes. Au delà de 100 caractères le texte sera masqué par des poin…</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Semper urna molestie arcu sit id. Ultricies purus lectus consectetur imperdiet aliquam eu, rutrum erat consectetur. Blandit mi a facilisi bibendum erat euismod nulla sagittis. Semper urna molestie arcu sit id. Ultricies purus lectus consectetur imperdiet aliquam eu, rutrum erat consectetur. Blandit</p>
+                    <div class="author">
+                        <img src="/assets/img/JD.jpg" alt="Julien Dereumaux">
+                        <h4 class="name">Julien Dereumaux - Capitaine de Pilot’in</h4>
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </div>
+                </article>
+                <article>
+                    <ul class="tagList">
+                        <li>Catégorie</li>
+                    </ul>
+                    <h2>Titre de l’article sur une ou plusieurs lignes. Au delà de 100 caractères le texte sera masqué par des poin…</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Semper urna molestie arcu sit id. Ultricies purus lectus consectetur imperdiet aliquam eu, rutrum erat consectetur. Blandit mi a facilisi bibendum erat euismod nulla sagittis. Semper urna molestie arcu sit id. Ultricies purus lectus consectetur imperdiet aliquam eu, rutrum erat consectetur. Blandit</p>
+                    <div class="author">
+                        <img src="/assets/img/JD.jpg" alt="Julien Dereumaux">
+                        <h4 class="name">Julien Dereumaux - Capitaine de Pilot’in</h4>
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </div>
+                </article>
+                <article>
+                    <ul class="tagList">
+                        <li>Catégorie</li>
+                    </ul>
+                    <h2>Titre de l’article sur une ou plusieurs lignes. Au delà de 100 caractères le texte sera masqué par des poin…</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Semper urna molestie arcu sit id. Ultricies purus lectus consectetur imperdiet aliquam eu, rutrum erat consectetur. Blandit mi a facilisi bibendum erat euismod nulla sagittis. Semper urna molestie arcu sit id. Ultricies purus lectus consectetur imperdiet aliquam eu, rutrum erat consectetur. Blandit</p>
+                    <div class="author">
+                        <img src="/assets/img/JD.jpg" alt="Julien Dereumaux">
+                        <h4 class="name">Julien Dereumaux - Capitaine de Pilot’in</h4>
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </div>
+                </article>
+            </div>
+            <div class="arrowHover blue articleBtn" >
+                <a href="#">
+                    <h4>Tous les articles &nbsp</h4>
+                    <i class="fa-solid fa-arrow-right"></i>
+                </a>
+            </div>
+        </section>
+        
+        <section id="ready">
+            <div class="card">
+                <div class="left">
+                    <img src="/assets/img/cta-illustation-corporate.png" alt="">
+                </div>
+                <div class="right">
+                    <div class="content">
+                        <h1>Ready to meet the future of your organization?</h1>
+                        <h2>Begin your data-driven transformation today!</h2>
+                        <div class="arrowHover orange articleBtn" >
+                            <a href="#">
+                                <h4>Book a demo &nbsp</h4>
+                                <i class="fa-solid fa-arrow-right"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
