--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <h1><span>today</span></h1>
                     
                     <p>We build software that empower public and private organizations to <br> bridge the gap between data, decisions and strategy execution.</p>
-                    <div class="arrowHover orange" >
+                    <div class="arrowHover orange talk" >
                         <a href="#">
                             <h4>Let’s talk &nbsp</h4>
                             <i class="fa-solid fa-arrow-right"></i>
@@ -298,7 +298,7 @@
                     <div class="content">
                         <h1>Ready to meet the future of your organization?</h1>
                         <h2>Begin your data-driven transformation today!</h2>
-                        <div class="arrowHover orange articleBtn" >
+                        <div class="arrowHover orange book" >
                             <a href="#">
                                 <h4>Book a demo &nbsp</h4>
                                 <i class="fa-solid fa-arrow-right"></i>
