--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="base 💻 Thomas Pasquet" />
+    <meta property="og:title" content="Pilot'in 💻 Thomas Pasquet" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="assets/img/favicon-pilotin.svg" />
+    <link rel="icon" href="assets/img/favicon-pilotin.svg" type="image/svg">
     <link rel="stylesheet" href="/styles/style_header_footer.css">
     <link rel="stylesheet" href="/styles/style_main.css">
     <link rel="stylesheet" href="/styles/style_mobile.css">
     <script src="https://kit.fontawesome.com/665bd144e6.js" crossorigin="anonymous"></script>
-    <title>base</title>
+    <title>Test Front End Pilot'in</title>
 </head>
 <body>
     <header class="unactive">
