--- a/index.html
+++ b/index.html
@@ -57,11 +57,6 @@
                     <h4>FR &nbsp</h4>
                     <img src="/assets/img/Icon-right.svg" alt="">
                 </div>
-                <ul class="languageList">
-                    <li><h4>EN</h4></li>
-                    <li><h4>SP</h4></li>
-                    <li><h4>RU</h4></li>
-                </ul>
             </div>
         </div>
     </header>
@@ -227,22 +222,27 @@
         <section id="trust">
             <h1>They trust Pilot'in. <br> <span>Why not you?</span></h1>
             <div class="card">
-                <div class="left">
-                    <i class="fa-solid fa-circle-play"></i>
+                <div  class="left">
+                    <div id="player">
+                            <i class="fa-solid fa-circle-play"></i>
+                    </div>
+                    <img id="galleryVideo" class="activeR" src="/assets/img/Casclient-Exki.jpg" alt="">
+                    
                 </div>
+                <div id="afterPlayer"><div></div></div>
                 <div class="right">
                     <div class="content">
-                        <img id="galleryImg" src="/assets/img/EXKi-2.png" alt="logo Exki">
-                        <h3 id="galleryAuthor" class="author">Thierry Soubestre</h3>
-                        <p id="galleryText">In a few weeks, 5 critical financial data sources were integrated and information is now available every day.</p>
+                        <img id="galleryImg" class="active" src="/assets/img/EXKi-2.png" alt="logo Exki">
+                        <h3 id="galleryAuthor" class="author active">Thierry Soubestre</h3>
+                        <p id="galleryText" class="active">In a few weeks, 5 critical financial data sources were integrated and information is now available every day.</p>
                         <div class="button">
                             <i class="fa-solid fa-arrow-left btnL"></i>
                             <i class="fa-solid fa-arrow-right btnR"></i>
                         </div>
                         <div id="counterCard">
-                            <div class="exk"></div>
-                            <div class="ditp"></div>
-                            <div class="bnp"></div>
+                            <div id="exk" class="active"></div>
+                            <div id="ditp" class="unactive"></div>
+                            <div id="bnp" class="unactive"></div>
                         </div>
                     </div>
                 </div>
@@ -318,13 +318,6 @@
                 </div>
             </div>
         </section>
-
-
-
-
-
-
-
 
     </main>
     <footer>
